--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-      "build": "",
+      "build": "rollup -c",
       "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "Ryan Martin",
     "license": "MIT"
-  }
+}
